# raytracer

./: CMakeLists.txt
headers/: colour.h  intRemap.h  main.h  ppmFileGen.h  rand.h  raytracer.h  sceneInfo.h  utility.h
src/: main.cpp  main.h  ppmFileGen.cpp  ppmFileGen.h  raytracer.cpp  raytracer.h  sceneInfo.cpp  timer.cpp  timer.h
